--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,6 +5,10 @@
 <body>
     <div id="menu">
             <img src="/static/menu-1.jpg"/>
+            <div id="img2">
+                <img src="/static/menu-2.jpg"/>
+            </div>
+            
             <div id="rectangle"></div>
             <div id="fish">
                 <img src="/static/fish.png"/>
