--- a/templates/deleteMenuItem.html
+++ b/templates/deleteMenuItem.html
@@ -5,7 +5,16 @@
 
 <body>
     <div id="cover-delete">
-        <img src="/static/cover-delete-restaurant.jpg"/>
+        <picture>
+            <source 
+                media="(min-width: 750px)"
+                srcset="../static/cover-delete-restaurant.jpg">
+            <source 
+                media="(min-width: 200)"
+                srcset="../static/cover-delete-restaurant-mobile.jpg">
+            <img src="../static/cover-delete-restaurant.jpg">
+        </picture>
+        
         <div id="rectangle"></div>
         <h1>Delete a Menu Item</h1>
 
