--- a/templates/deleteRestaurant.html
+++ b/templates/deleteRestaurant.html
@@ -4,7 +4,16 @@
 </head>
 <body>
     <div id="cover-delete">
-        <img src="/static/cover-delete-restaurant.jpg"/>
+        <picture>
+            <source 
+                media="(min-width: 750px)"
+                srcset="../static/cover-delete-restaurant.jpg">
+            <source 
+                media="(min-width: 200)"
+                srcset="../static/cover-delete-restaurant-mobile.jpg">
+            <img src="../static/cover-delete-restaurant.jpg">
+        </picture>
+            
         <div id='rectangle'></div>
         <h1>Delete a Restaurant</h1>
 
