--- a/templates/newMenuItem.html
+++ b/templates/newMenuItem.html
@@ -4,7 +4,16 @@
 </head>
 <body>
     <div id="cover-new">
-        <img src="/static/cover-new-restaurant.jpg"/>
+        <picture>
+            <source 
+                media="(min-width: 750px)"
+                srcset="../static/cover-new-restaurant.jpg">
+            <source 
+                media="(min-width: 200)"
+                srcset="../static/cover-new-restaurant-mobile.jpg">
+            <img src="../static/cover-new-restaurant.jpg">
+        </picture>
+
         <div id="rectangle"></div>
         <h1>Create a New Menu Item</h1>
 
