--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -64,16 +64,17 @@
     </div>
     <div id="names">
         {% for r in restaurants %}
-            <h3><a href="{{url_for('showMenu', restaurant_id=r.id)}}">{{r.name}}</a></h3>
-            <br>
-            <div id="edit">
-                <a href="{{url_for('editRestaurant', restaurant_id=r.id) }}">Edit</a>
+            <div id="name">
+                <h3><a href="{{url_for('showMenu', restaurant_id=r.id)}}">{{r.name}}</a></h3>
+                <br>
+                <div id="edit">
+                    <a href="{{url_for('editRestaurant', restaurant_id=r.id) }}">Edit</a>
+                </div>
+                <div id="delete">
+                    <a href="{{url_for('deleteRestaurant', restaurant_id=r.id) }}">Delete</a>
+                    <!--<br><br><br><br>-->
+                </div>
             </div>
-            <div id="delete">
-                <a href="{{url_for('deleteRestaurant', restaurant_id=r.id) }}">Delete</a>
-                <br><br><br><br>
-            </div>
-
         {% endfor %}
     </div>
 </div>
