--- a/templates/deleteMenuItem.html
+++ b/templates/deleteMenuItem.html
@@ -8,11 +8,8 @@
         <picture>
             <source 
                 media="(min-width: 750px)"
-                srcset="../static/cover-delete-restaurant.jpg">
-            <source 
-                media="(min-width: 200)"
-                srcset="../static/cover-delete-restaurant-mobile.jpg">
-            <img src="../static/cover-delete-restaurant.jpg">
+                srcset="/static/cover-delete-restaurant.jpg">
+            <img src="/static/cover-delete-restaurant-mobile.jpg">
         </picture>
         
         <div id="rectangle"></div>
