--- a/templates/newRestaurant.html
+++ b/templates/newRestaurant.html
@@ -7,11 +7,8 @@
         <picture>
             <source 
                 media="(min-width: 750px)"
-                srcset="../static/cover-new-restaurant.jpg">
-            <source 
-                media="(min-width: 200)"
-                srcset="../static/cover-new-restaurant-mobile.jpg">
-            <img src="../static/cover-new-restaurant.jpg">
+                srcset="/static/cover-new-restaurant.jpg">
+            <img src="/static/cover-new-restaurant-mobile.jpg">
         </picture>
 
         <div id="rectangle"></div>
